--- a/app/src/main/res/layout/ventana_main.xml
+++ b/app/src/main/res/layout/ventana_main.xml
@@ -7,15 +7,29 @@
 
     <TextView
         android:id="@+id/textoInicial"
-        android:layout_width="169dp"
-        android:layout_height="77dp"
+        android:layout_width="242dp"
+        android:layout_height="172dp"
         android:gravity="center"
         android:text="Victor Fernandez"
         android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.515" />
+        app:layout_constraintVertical_bias="0.368" />
+
+    <Button
+        android:id="@+id/mostrarRegistro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="recogerDatosRegistro"
+        android:text="MOSTRAR DATOS"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.755" />
 </androidx.constraintlayout.widget.ConstraintLayout>
