--- a/app/src/main/res/menu/game_menu.xml
+++ b/app/src/main/res/menu/game_menu.xml
@@ -4,6 +4,8 @@
         <menu>
             <item android:id="@+id/Empezar" android:title="Empezar"/>
             <item android:id="@+id/Siguiente" android:title="Siguiente"/>
+            <item android:id="@+id/Registro" android:title="Registrarse"/>
+            <item android:id="@+id/Login" android:title="Logear"/>
         </menu>
     </item>
 </menu>
